fixing save button alignment

--- a/client/src/components/AddressSearch/style.css
+++ b/client/src/components/AddressSearch/style.css
@@ -17,5 +17,5 @@
 
 #addSaveBtn {
     margin-left: 5px;
-    margin-top: 8.5px
+    margin-top: 7.5px
 }
